--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               class="absolute -inset-4 bg-emerald-100 rounded-xl transform rotate-2 group-hover:rotate-1 transition-all duration-500"
             ></div>
             <img
-              src="https://images.unsplash.com/photo-1544644181-1484b3fdfc62?q=80&w=800&auto=format&fit=crop"
+              src="kpra.jpg"
               alt="Resort View"
               class="relative rounded-lg shadow-xl w-full object-cover h-[500px]"
             />
@@ -487,6 +487,7 @@
             </div>
             <h4 class="text-xl font-semibold mb-2">Phone</h4>
             <p class="text-emerald-100">+91 95261 00505</p>
+            <p class="text-emerald-100">+91 98467 22580</p>
             <a
               href="https://wa.me/919526100505?text=Hi%2C%20I%20am%20interested%20in%20booking%20a%20stay%20at%20Coral%20Vista%20Inn."
               target="_blank"
@@ -558,14 +559,15 @@
           <p class="text-sm mt-1">© 2024 All rights reserved.</p>
         </div>
         <div class="flex space-x-6">
-          <a href="#" class="hover:text-white transition"
+          <a
+            href="https://www.instagram.com/coralvistainn"
+            class="hover:text-white transition"
             ><i data-lucide="instagram" class="w-6 h-6"></i
           ></a>
-          <a href="#" class="hover:text-white transition"
+          <a
+            href="https://www.facebook.com/profile.php?id=61584589692280"
+            class="hover:text-white transition"
             ><i data-lucide="facebook" class="w-6 h-6"></i
-          ></a>
-          <a href="#" class="hover:text-white transition"
-            ><i data-lucide="twitter" class="w-6 h-6"></i
           ></a>
         </div>
       </div>
